tests/ui/rfc-2093-infer-outlives/reference.rs
#![feature(crablangc_attrs)]

#[crablangc_outlives]
struct Foo<'a, T> { //~ ERROR crablangc_outlives
    bar: &'a T,
}

fn main() {}
